<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-57dp"
        android:layout_marginBottom="126dp"
        android:layout_toEndOf="@+id/button"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <DatePicker
        android:id="@+id/date"
        android:layout_width="258dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="21dp" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="286dp"
        android:layout_marginLeft="286dp"
        android:layout_marginTop="382dp"
        android:text="離開系統" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="63dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="491dp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="203dp"
        android:text="@string/FromWhere" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="-8dp"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:text="@string/ToWhere" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_return"
        android:layout_alignTop="@+id/spinner2"
        android:layout_marginStart="17dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="303dp"
        android:text="@string/Count" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:layout_alignRight="@+id/textView6"
        android:layout_marginStart="103dp"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="-22dp"
        android:layout_marginEnd="-93dp"
        android:layout_marginRight="-93dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_return"
        android:layout_toEndOf="@+id/textView6"
        android:onClick="buttonOnClick"
        android:text="@string/OK" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="3dp"
        android:text="@string/OKDate" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="87dp"
        android:text="@string/OKCount" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:layout_alignEnd="@+id/button"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="47dp"
        android:text="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="39dp"
        android:text="@string/OKFrom" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/tv_date"
        android:text="@string/OKTo" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_date"
        android:layout_alignTop="@+id/textView"
        android:text="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_alignEnd="@+id/spinner3"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="56dp"
        android:text="" />


</RelativeLayout>